Expose query backend in version endpoint
